Fix text that overflowed container

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,3 @@
 .App .app-description .section-content {
   padding-top: 0;
 }
-
-.App .main .search-bar-wrapper {
-  margin-left: 3vw;
-  margin-right: 3vw;
-}
