--- a/src/components/SearchForm.scss
+++ b/src/components/SearchForm.scss
@@ -1,4 +1,4 @@
-.heading {
+.SearchForm .heading {
   margin: 0;
   color: var(--gray-800);
   font-style: italic;
